# goldeneye

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
recipe/: recipe.yaml
skills/goldeneye-render-config/: SKILL.md
skills/goldeneye-render-config/references/: render-command-templates.md
skills/goldeneye-test-author/: SKILL.md
skills/goldeneye-test-author/references/: fixture-patterns.md  suite-config.md
src/goldeneye/: __init__.py  build_exr_wasm.py  cli.py  config.py  extract_failures.py  images.py  pytest_plugin.py  reference_archives.py  regenerate_comparisons.py  report_html.py  view_server.py
src/goldeneye/static/: goldeneye-exr-viewer.js  goldeneye_exr_wasm.wasm
tests/: test_extract_failures.py  test_images.py  test_pytest_runner.py  test_reference_archives.py  test_regenerate_comparisons.py
tools/exr_wasm/: Cargo.toml
